tdf#38097 min numerator/denominator at least 1

In <number:fraction> attributes min-denominator-digits and
min-numerator-digits should be at least 1.
Gnumeric can create file with 0 values

Change-Id: I08ef51c23ce686136f51277671bf630807353484